--- a/docs/workforce-management-framework/upstream-1/master.adoc
+++ b/docs/workforce-management-framework/upstream-1/master.adoc
@@ -1,16 +1,16 @@
 include::topics/shared/attributes.adoc[]
 
-[[Raincatcher]]
-= {WFM-RC-NameLong}
-
 :sectnums:
 :toc: left
 :toclevels: 5
 :last-update-label!:
 
+[[Raincatcher]]
+= {WFM-RC-NameLong}
+
 [[introducing-raincatcher]]
 == Introducing {WFM-RC-NameLong}
-include::introducing-the-features-of-raincatcher.adoc[leveloffset=+2]
+//include::introducing-the-features-of-raincatcher.adoc[leveloffset=+2]
 
 [[preparing-the-local-development-environment]]
 == Preparing the Local Development Environment
@@ -20,7 +20,7 @@ include::introducing-the-features-of-raincatcher.adoc[leveloffset=+2]
 
 [[programming-a-raincatcher-project]]
 == Programming a {WFM-RC-NameShort} Project
-include::using-wfm-logger-and-setting-a-logging-level.adoc[leveloffset=+2]
+//include::using-wfm-logger-and-setting-a-logging-level.adoc[leveloffset=+2]
 
 [[testing-a-raincatcher-project]]
 == Testing a {WFM-RC-NameShort} Project
@@ -34,6 +34,5 @@ include::using-wfm-logger-and-setting-a-logging-level.adoc[leveloffset=+2]
 // **********************************
 // * Appendix: Revision Information *
 // **********************************
-include::topics/shared/templates/revision-info.adoc[]
 
-image::./topics/shared/images/raincatcher.svg[logo]
+include::topics/shared/templates/revision-info.adoc[]
