Introduction and getting started section. (#25)
* commented out logging module and set table of contents to left

* refractor landing page

* link documents

* First review

* Introducing WFM rework

* added logo

* added logo

* Added WFM-NODE-VERSION to attributes

* Getting Started with WFM rework

* Introduction and Getting Started - final first draft review

* Updates based on comments made after commit:bd4e79a165b2013013d580e178c6f375a64fdf3f

* Updates based on feedback from W

* Update ref-introducing-raincatcher.adoc

* Second Draft

* Updates after 5:00pm call

* Update master.adoc

* addressing pr comments

* added a note and some minor changes

* minor update

--- a/docs/workforce-management-framework/upstream-1/master.adoc
+++ b/docs/workforce-management-framework/upstream-1/master.adoc
@@ -5,33 +5,21 @@ include::topics/shared/attributes.adoc[]
 :toclevels: 5
 :last-update-label!:
 
-[[Raincatcher]]
-= {WFM-RC-NameLong}
+image::../../shared/images/logo-blue.png[logo]
 
 
 [[introducing-raincatcher]]
 == Introducing {WFM-RC-NameLong}
-//include::introducing-the-features-of-raincatcher.adoc[leveloffset=+2]
+include::introducing-raincatcher.adoc[leveloffset=+2]
 
-[[preparing-the-local-development-environment]]
-== Preparing the Local Development Environment
+//[[preparing-the-local-development-environment]]
+//== Preparing the Local Development Environment
 
-[[getting-started-with-raincatcher]]
-== Getting Started with {WFM-RC-NameShort}
+[[getting-started]]
+== Getting Started with {WFM-RC-NameLong}
+include::running-the-demo-app.adoc[leveloffset=+2]
 
-[[programming-a-raincatcher-project]]
-== Programming a {WFM-RC-NameShort} Project
 
-[[testing-a-raincatcher-project]]
-== Testing a {WFM-RC-NameShort} Project
 
-[[troubleshooting-a-raincatcher-project]]
-== Troubleshooting a {WFM-RC-NameShort} Project
 
-[[raincatcher-modules-reference]]
-== {WFM-RC-NameShort} Modules Reference
 
-// **********************************
-// * Appendix: Revision Information *
-// **********************************
-include::topics/shared/templates/revision-info.adoc[]
